--- a/client/src/styles/css/Custom.css
+++ b/client/src/styles/css/Custom.css
@@ -9,17 +9,22 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
+/* #007bff */
+
 :root {
-  --blue: #007bff;
+  --blue: #000006;
   --indigo: #6610f2;
   --purple: #6f42c1;
   --pink: #e83e8c;
   --red: #dc3545;
   --orange: #fd7e14;
+  --blue-char: #212529;
   --yellow: #ffc107;
   --green: #28a745;
   --teal: #20c997;
   --cyan: #17a2b8;
+  --pattens-blue: #dee2e6;
+  --corn-silk: #fcf8e3;
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
@@ -27,10 +32,12 @@
   --secondary: #F67280;
   --success: #0074E4;
   --info: #0074E4;
+  --main-button: #deecfc;
+  --main-button-hover: #d5e3f2;
   --warning: #FC3C3C;
   --danger: #FF4057;
   --light: #F2F2F0;
-  --dark: #072247;
+  --dark: #87a8d0;
   --breakpoint-xs: 0;
   --breakpoint-sm: 576px;
   --breakpoint-md: 768px;
@@ -70,7 +77,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color: #var(--blue-char);
   text-align: left;
   background-color: var(--white);
 }
@@ -441,7 +448,7 @@ small,
 mark,
 .mark {
   padding: 0.2em;
-  background-color: #fcf8e3;
+  background-color: var(--corn-silk);
 }
 
 .list-unstyled {
@@ -490,7 +497,7 @@ mark,
 .img-thumbnail {
   padding: 0.25rem;
   background-color: var(--white);
-  border: 1px solid #dee2e6;
+  border: 1px solid var(--pattens-blue);
   border-radius: 0.25rem;
   max-width: 100%;
   height: auto;
@@ -524,7 +531,7 @@ kbd {
   padding: 0.2rem 0.4rem;
   font-size: 87.5%;
   color: var(--white);
-  background-color: #212529;
+  background-color: var(--blue-char);
   border-radius: 0.2rem;
 }
 
@@ -537,7 +544,7 @@ kbd kbd {
 pre {
   display: block;
   font-size: 87.5%;
-  color: #212529;
+  color: var(--blue-char);
 }
 
 pre code {
@@ -562,16 +569,16 @@ pre code {
 .table td {
   padding: 0.75rem;
   vertical-align: top;
-  border-top: 1px solid #dee2e6;
+  border-top: 1px solid var(--pattens-blue);
 }
 
 .table thead th {
   vertical-align: bottom;
-  border-bottom: 2px solid #dee2e6;
+  border-bottom: 2px solid var(--pattens-blue);
 }
 
 .table tbody + tbody {
-  border-top: 2px solid #dee2e6;
+  border-top: 2px solid var(--pattens-blue);
 }
 
 .table .table {
@@ -584,12 +591,12 @@ pre code {
 }
 
 .table-bordered {
-  border: 1px solid #dee2e6;
+  border: 1px solid var(--pattens-blue);
 }
 
 .table-bordered th,
 .table-bordered td {
-  border: 1px solid #dee2e6;
+  border: 1px solid var(--pattens-blue);
 }
 
 .table-bordered thead th,
@@ -749,19 +756,19 @@ pre code {
 
 .table .thead-dark th {
   color: var(--white);
-  background-color: #212529;
+  background-color: var(--blue-char);
   border-color: #32383e;
 }
 
 .table .thead-light th {
   color: #495057;
   background-color: #e9ecef;
-  border-color: #dee2e6;
+  border-color: var(--pattens-blue);
 }
 
 .table-dark {
   color: var(--white);
-  background-color: #212529;
+  background-color: var(--blue-char);
 }
 
 .table-dark th,
@@ -932,7 +939,7 @@ select.form-control:focus::-ms-value {
   padding-bottom: 0.375rem;
   margin-bottom: 0;
   line-height: 1.5;
-  color: #212529;
+  color: var(--blue-char);
   background-color: transparent;
   border: solid transparent;
   border-width: 1px 0;
@@ -1389,7 +1396,7 @@ fieldset:disabled a.btn {
 }
 
 .btn-secondary {
-  color: #212529;
+  color: var(--blue-char);
   background-color: var(--secondary);
   border-color: var(--secondary);
 }
@@ -1405,7 +1412,7 @@ fieldset:disabled a.btn {
 }
 
 .btn-secondary.disabled, .btn-secondary:disabled {
-  color: #212529;
+  color: var(--blue-char);
   background-color: var(--secondary);
   border-color: var(--secondary);
 }
@@ -1457,15 +1464,15 @@ fieldset:disabled a.btn {
 }
 
 .btn-info {
-  color: #212529;
-  background-color: #74DBEF;
-  border-color: #74DBEF;
+  color: var(--blue-char);
+  background-color: var(--main-button);
+  border-color: var(--main-button);
 }
 
 .btn-info:hover {
-  color: #212529;
-  background-color: #52d2eb;
-  border-color: #46cfea;
+  color: var(--blue-char);
+  background-color: var(--main-button-hover);
+  border-color: var(--main-button-hover);
 }
 
 .btn-info:focus, .btn-info.focus {
@@ -1473,14 +1480,14 @@ fieldset:disabled a.btn {
 }
 
 .btn-info.disabled, .btn-info:disabled {
-  color: #212529;
-  background-color: #74DBEF;
-  border-color: #74DBEF;
+  color: var(--blue-char);
+  background-color: var(--main-button);
+  border-color: var(--main-button);
 }
 
 .btn-info:not(:disabled):not(.disabled):active, .btn-info:not(:disabled):not(.disabled).active,
 .show > .btn-info.dropdown-toggle {
-  color: #212529;
+  color: var(--blue-char);
   background-color: #46cfea;
   border-color: #3bcce8;
 }
@@ -1559,13 +1566,13 @@ fieldset:disabled a.btn {
 }
 
 .btn-light {
-  color: #212529;
+  color: var(--blue-char);
   background-color: var(--light);
   border-color: var(--light);
 }
 
 .btn-light:hover {
-  color: #212529;
+  color: var(--blue-char);
   background-color: #e0e0dc;
   border-color: #dadad5;
 }
@@ -1575,14 +1582,14 @@ fieldset:disabled a.btn {
 }
 
 .btn-light.disabled, .btn-light:disabled {
-  color: #212529;
+  color: var(--blue-char);
   background-color: var(--light);
   border-color: var(--light);
 }
 
 .btn-light:not(:disabled):not(.disabled):active, .btn-light:not(:disabled):not(.disabled).active,
 .show > .btn-light.dropdown-toggle {
-  color: #212529;
+  color: var(--blue-char);
   background-color: #dadad5;
   border-color: #d4d4ce;
 }
@@ -1668,7 +1675,7 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-secondary:hover {
-  color: #212529;
+  color: var(--blue-char);
   background-color: var(--secondary);
   border-color: var(--secondary);
 }
@@ -1684,7 +1691,7 @@ fieldset:disabled a.btn {
 
 .btn-outline-secondary:not(:disabled):not(.disabled):active, .btn-outline-secondary:not(:disabled):not(.disabled).active,
 .show > .btn-outline-secondary.dropdown-toggle {
-  color: #212529;
+  color: var(--blue-char);
   background-color: var(--secondary);
   border-color: var(--secondary);
 }
@@ -1729,16 +1736,16 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-info {
-  color: #74DBEF;
+  color: var(--main-button);
   background-color: transparent;
   background-image: none;
-  border-color: #74DBEF;
+  border-color: var(--main-button);
 }
 
 .btn-outline-info:hover {
-  color: #212529;
-  background-color: #74DBEF;
-  border-color: #74DBEF;
+  color: var(--blue-char);
+  background-color: var(--main-button);
+  border-color: var(--main-button);
 }
 
 .btn-outline-info:focus, .btn-outline-info.focus {
@@ -1746,15 +1753,15 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-info.disabled, .btn-outline-info:disabled {
-  color: #74DBEF;
+  color: var(--main-button);
   background-color: transparent;
 }
 
 .btn-outline-info:not(:disabled):not(.disabled):active, .btn-outline-info:not(:disabled):not(.disabled).active,
 .show > .btn-outline-info.dropdown-toggle {
-  color: #212529;
-  background-color: #74DBEF;
-  border-color: #74DBEF;
+  color: var(--blue-char);
+  background-color: var(--main-button);
+  border-color: var(--main-button);
 }
 
 .btn-outline-info:not(:disabled):not(.disabled):active:focus, .btn-outline-info:not(:disabled):not(.disabled).active:focus,
@@ -1838,7 +1845,7 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-light:hover {
-  color: #212529;
+  color: var(--blue-char);
   background-color: var(--light);
   border-color: var(--light);
 }
@@ -1854,7 +1861,7 @@ fieldset:disabled a.btn {
 
 .btn-outline-light:not(:disabled):not(.disabled):active, .btn-outline-light:not(:disabled):not(.disabled).active,
 .show > .btn-outline-light.dropdown-toggle {
-  color: #212529;
+  color: var(--blue-char);
   background-color: var(--light);
   border-color: var(--light);
 }
@@ -2015,7 +2022,7 @@ input[type=button].btn-block {
   padding: 0.5rem 0;
   margin: 0.125rem 0 0;
   font-size: 1rem;
-  color: #212529;
+  color: var(--blue-char);
   text-align: left;
   list-style: none;
   background-color: var(--white);
@@ -2141,7 +2148,7 @@ input[type=button].btn-block {
   padding: 0.25rem 1.5rem;
   clear: both;
   font-weight: 400;
-  color: #212529;
+  color: var(--blue-char);
   text-align: inherit;
   white-space: nowrap;
   background-color: transparent;
@@ -2181,7 +2188,7 @@ input[type=button].btn-block {
 .dropdown-item-text {
   display: block;
   padding: 0.25rem 1.5rem;
-  color: #212529;
+  color: var(--blue-char);
 }
 
 .btn-group,
@@ -2505,7 +2512,7 @@ input[type=button].btn-block {
   pointer-events: none;
   content: "";
   user-select: none;
-  background-color: #dee2e6;
+  background-color: var(--pattens-blue);
 }
 
 .custom-control-label::after {
@@ -2721,7 +2728,7 @@ input[type=button].btn-block {
   height: 0.5rem;
   color: transparent;
   cursor: pointer;
-  background-color: #dee2e6;
+  background-color: var(--pattens-blue);
   border-color: transparent;
   border-radius: 1rem;
 }
@@ -2749,7 +2756,7 @@ input[type=button].btn-block {
   height: 0.5rem;
   color: transparent;
   cursor: pointer;
-  background-color: #dee2e6;
+  background-color: var(--pattens-blue);
   border-color: transparent;
   border-radius: 1rem;
 }
@@ -2783,13 +2790,13 @@ input[type=button].btn-block {
 }
 
 .custom-range::-ms-fill-lower {
-  background-color: #dee2e6;
+  background-color: var(--pattens-blue);
   border-radius: 1rem;
 }
 
 .custom-range::-ms-fill-upper {
   margin-right: 15px;
-  background-color: #dee2e6;
+  background-color: var(--pattens-blue);
   border-radius: 1rem;
 }
 
@@ -2815,7 +2822,7 @@ input[type=button].btn-block {
 }
 
 .nav-tabs {
-  border-bottom: 1px solid #dee2e6;
+  border-bottom: 1px solid var(--pattens-blue);
 }
 
 .nav-tabs .nav-item {
@@ -2829,7 +2836,7 @@ input[type=button].btn-block {
 }
 
 .nav-tabs .nav-link:hover, .nav-tabs .nav-link:focus {
-  border-color: #e9ecef #e9ecef #dee2e6;
+  border-color: #e9ecef #e9ecef var(--pattens-blue);
 }
 
 .nav-tabs .nav-link.disabled {
@@ -2842,7 +2849,7 @@ input[type=button].btn-block {
 .nav-tabs .nav-item.show .nav-link {
   color: #495057;
   background-color: var(--white);
-  border-color: #dee2e6 #dee2e6 var(--white);
+  border-color: var(--pattens-blue) var(--pattens-blue) var(--white);
 }
 
 .nav-tabs .dropdown-menu {
@@ -3569,7 +3576,7 @@ input[type=button].btn-block {
   line-height: 1.25;
   color: var(--primary);
   background-color: var(--white);
-  border: 1px solid #dee2e6;
+  border: 1px solid var(--pattens-blue);
 }
 
 .page-link:hover {
@@ -3577,7 +3584,7 @@ input[type=button].btn-block {
   color: #020a12;
   text-decoration: none;
   background-color: #e9ecef;
-  border-color: #dee2e6;
+  border-color: var(--pattens-blue);
 }
 
 .page-link:focus {
@@ -3613,7 +3620,7 @@ input[type=button].btn-block {
   pointer-events: none;
   cursor: auto;
   background-color: var(--white);
-  border-color: #dee2e6;
+  border-color: var(--pattens-blue);
 }
 
 .pagination-lg .page-link {
@@ -3687,12 +3694,12 @@ input[type=button].btn-block {
 }
 
 .badge-secondary {
-  color: #212529;
+  color: var(--blue-char);
   background-color: var(--secondary);
 }
 
 .badge-secondary[href]:hover, .badge-secondary[href]:focus {
-  color: #212529;
+  color: var(--blue-char);
   text-decoration: none;
   background-color: #f34255;
 }
@@ -3709,12 +3716,12 @@ input[type=button].btn-block {
 }
 
 .badge-info {
-  color: #212529;
-  background-color: #74DBEF;
+  color: var(--blue-char);
+  background-color: var(--main-button);
 }
 
 .badge-info[href]:hover, .badge-info[href]:focus {
-  color: #212529;
+  color: var(--blue-char);
   text-decoration: none;
   background-color: #46cfea;
 }
@@ -3742,12 +3749,12 @@ input[type=button].btn-block {
 }
 
 .badge-light {
-  color: #212529;
+  color: var(--blue-char);
   background-color: var(--light);
 }
 
 .badge-light[href]:hover, .badge-light[href]:focus {
-  color: #212529;
+  color: var(--blue-char);
   text-decoration: none;
   background-color: #dadad5;
 }
@@ -3992,7 +3999,7 @@ input[type=button].btn-block {
 }
 
 .list-group-item-action:active {
-  color: #212529;
+  color: var(--blue-char);
   background-color: #e9ecef;
 }
 
@@ -4640,7 +4647,7 @@ button.close {
 
 .popover-body {
   padding: 0.5rem 0.75rem;
-  color: #212529;
+  color: var(--blue-char);
 }
 
 .carousel {
@@ -4912,7 +4919,7 @@ button.bg-success:focus {
 }
 
 .bg-info {
-  background-color: #74DBEF !important;
+  background-color: var(--main-button) !important;
 }
 
 a.bg-info:hover, a.bg-info:focus,
@@ -4970,23 +4977,23 @@ button.bg-dark:focus {
 }
 
 .border {
-  border: 1px solid #dee2e6 !important;
+  border: 1px solid var(--pattens-blue) !important;
 }
 
 .border-top {
-  border-top: 1px solid #dee2e6 !important;
+  border-top: 1px solid var(--pattens-blue) !important;
 }
 
 .border-right {
-  border-right: 1px solid #dee2e6 !important;
+  border-right: 1px solid var(--pattens-blue) !important;
 }
 
 .border-bottom {
-  border-bottom: 1px solid #dee2e6 !important;
+  border-bottom: 1px solid var(--pattens-blue) !important;
 }
 
 .border-left {
-  border-left: 1px solid #dee2e6 !important;
+  border-left: 1px solid var(--pattens-blue) !important;
 }
 
 .border-0 {
@@ -5022,7 +5029,7 @@ button.bg-dark:focus {
 }
 
 .border-info {
-  border-color: #74DBEF !important;
+  border-color: var(--main-button) !important;
 }
 
 .border-warning {
@@ -7925,7 +7932,7 @@ a.text-success:hover, a.text-success:focus {
 }
 
 .text-info {
-  color: #74DBEF !important;
+  color: var(--main-button) !important;
 }
 
 a.text-info:hover, a.text-info:focus {
@@ -7965,7 +7972,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .text-body {
-  color: #212529 !important;
+  color: var(--blue-char) !important;
 }
 
 .text-muted {
@@ -8073,7 +8080,7 @@ h3 {
 
   .table-bordered th,
 .table-bordered td {
-    border: 1px solid #dee2e6 !important;
+    border: 1px solid var(--pattens-blue) !important;
   }
 
   .table-dark {
@@ -8084,12 +8091,12 @@ h3 {
 .table-dark td,
 .table-dark thead th,
 .table-dark tbody + tbody {
-    border-color: #dee2e6;
+    border-color: var(--pattens-blue);
   }
 
   .table .thead-dark th {
     color: inherit;
-    border-color: #dee2e6;
+    border-color: var(--pattens-blue);
   }
 }
 
