--- a/client/src/styles/css/custom.css
+++ b/client/src/styles/css/custom.css
@@ -46,7 +46,7 @@
   --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --main-font-family: 'Nunito';
-  --second-font-family: 'Roboto Slab', serif;
+  --second-font-family: 'Nunito', serif;
 }
 
 *,
