--- a/client/src/styles/css/custom.css
+++ b/client/src/styles/css/custom.css
@@ -32,7 +32,7 @@
   --secondary: #F67280;
   --success: #0074E4;
   --info: #0074E4;
-  --main-button: #000000;
+  --main-button: #deecfc;
   --main-button-hover: #d5e3f2;
   --warning: #FC3C3C;
   --danger: #FF4057;
